# rich-logger

./: LICENSE  README.md  pyproject.toml  validate.py
.github/workflows/: ci.yml
rich_reporter/: README.md  __init__.py  __main__.py
tests/: test_integration.py  test_reporter.py
